// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LicenseExpirationAlert > expired 1`] = `
<DocumentFragment>
  <div
    aria-live="assertive"
    class="alert alertWarning container align-items-center"
    role="alert"
  >
    <div
      class="content"
    >
      Your Sourcegraph license expired 3 months ago. 
      <a
        class="anchorLink site-alert__link"
        href="/site-admin/license"
      >
        <span
          class="underline"
        >
          Renew now
        </span>
      </a>
       or 
      <a
        class="anchorLink site-alert__link"
        href="https://sourcegraph.com/contact"
      >
        <span
          class="underline"
        >
          contact Sourcegraph
        </span>
      </a>
    </div>
    <button
      aria-label="Dismiss alert"
      class="btn btnIcon closeButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mdi-icon iconInline"
        fill="currentColor"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`LicenseExpirationAlert > expiring soon 1`] = `
<DocumentFragment>
  <div
    aria-live="assertive"
    class="alert alertWarning container align-items-center"
    role="alert"
  >
    <div
      class="content"
    >
      Your Sourcegraph license will expire in 3 days. 
      <a
        class="anchorLink site-alert__link"
        href="/site-admin/license"
      >
        <span
          class="underline"
        >
          Renew now
        </span>
      </a>
       or 
      <a
        class="anchorLink site-alert__link"
        href="https://sourcegraph.com/contact"
      >
        <span
          class="underline"
        >
          contact Sourcegraph
        </span>
      </a>
    </div>
    <button
      aria-label="Dismiss alert"
      class="btn btnIcon closeButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mdi-icon iconInline"
        fill="currentColor"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
